changed one media query as it created a display bug when actually viewed on mobile and not through the questionable chrome debugging tools

--- a/assets/style.css
+++ b/assets/style.css
@@ -192,7 +192,7 @@ header{
         bottom: -5rem;
     }
     .name-submission{
-        bottom: 15rem;
+        bottom: 10rem;
         left: unset;
 
     }
